# queue_tgbot

./: .evn.sample  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
bot/: core.py  main.py  utils.py
bot/callbacks/: __init__.py  join_to_queue.py  quit_from_queue.py
bot/database/: database.py
bot/handlers/: __init__.py  admin.py  delete_queue.py  new_queue.py  register.py  start.py
src/: config.py  database.py  lab_queue.py  main.py  schemas.py  utils.py
