[tool.poetry]
name = "queue-tgbot"
version = "0.1.0"
description = ""
authors = ["Dmitry Golub <gosest4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.18.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
