[tool.poetry]
name = "queue-tgbot"
version = "0.1.0"
description = ""
authors = ["Dmitry Golub <gosest4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.18.0"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
psycopg = "^3.2.5"
psycopg-binary = "^3.2.5"
sqlalchemy = "^2.0.38"
alembic = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
